# ChatQTRM

./: .env.example  .gitignore  DESKTOP.md  README.md  docker-compose.yml
backend/: main.py  requirements.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: make-icon.cjs
frontend/src/: App.tsx  DesktopApp.tsx  index.css  main.tsx
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: chat.rs  fs_tools.rs  git.rs  lib.rs  main.rs  projects.rs  search.rs  settings.rs  skills.rs  state.rs  storage.rs  terminal.rs
frontend/src/components/: ChatWindow.tsx  CodeBlock.tsx  Composer.tsx  ContextPanel.tsx  MessageBubble.tsx  Sidebar.tsx  SyntaxCodeBlock.tsx  ThemeToggle.tsx  WorkspaceExplorer.tsx
frontend/src/desktop/: ActivityBar.tsx  ApprovalModal.tsx  ChatsPanel.tsx  DesktopChat.tsx  DiffModal.tsx  FileEditorModal.tsx  FilesPanel.tsx  GitPanel.tsx  ProjectBar.tsx  SearchPanel.tsx  SettingsView.tsx  SkillsView.tsx  TerminalPanel.tsx
frontend/src/lib/: api.ts  desktop.ts  sse.ts  theme.ts
frontend/src/types/: desktop.ts  index.ts
